@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<addon id="plugin.video.rtvs.sk" name="rtvs.sk" provider-name="Maros Ondrasek" version="1.9.2">
+<addon id="plugin.video.rtvs.sk" name="rtvs.sk" provider-name="Maros Ondrasek" version="1.9.4">
     <requires>
         <import addon="xbmc.python" version="2.1.0" />  <!-- xbmc.python 3.0.0 -->
         <import addon="script.module.stream.resolver" version="1.6.13"/> <!-- script.module.stream.resolver 1.7.13 -->
